--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,11 +7,12 @@
  msg-form {
     width: 100%;
     height: 56px;
-    padding: 10px;
+    
   }
   
   #single_room {
     height: calc(100vh - 150px);
+  
   }
   
   #messages {
@@ -30,7 +31,7 @@
     margin-right: 0px !important;
     overflow-x: hidden;
     overflow-y: scroll;
-    margin-bottom: 55px;
+
   }
   #chatroom_container {
     height: 100vh;
@@ -52,4 +53,44 @@
     margin-bottom: 10px;
     background-color: #555555;
     padding: 10px;
+  }
+
+  .user_row {
+    height: 50px;
+    padding: 10px;
+    border-bottom: 1px solid #555555;
+  }
+  
+  .username {
+    overflow: hidden;
+  }
+  
+  .chat_pfp {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 30px;
+  }
+  .user_list_item {
+    height: 55px;
+    background-color: #343a40 !important;
+  }
+  .room_list_item {
+    height: 55px;
+    background-color: #343a40 !important;
+    color: #fff;
+  }
+
+  .name {
+    margin-top: 15px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    color: rgb(27, 37, 27);
+  }
+  .time {
+    padding-top: 0px;
+    margin-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    color: rgb(203, 237, 11);
   }
