--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,12 @@
-<div>
-    <%= link_to user.email, user %>
+<% if @single_room && @single_room.participant?(@single_room, user) %>
+  <% isActive = 'active' %>
+<% else %>
+  <% isActive = '' %>
+<% end %>
+
+<li class="list-group-item d-flex align-items-center justify-content-between user_list_item <%= isActive %>">
+  <div>
+    <%= link_to image_tag(user.chat_avatar, class: 'chat_pfp'), user %>
   </div>
+    <%= link_to user.email, user, class: 'ms-auto p-3 username', data: { turbo: 'false' } %>
+</li>
