added user status feature

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,8 +1,21 @@
+<%= turbo_frame_tag "appearance_channel" %>
+<div id="appearance_channel"></div>
 <div id="chatroom_container" class="row bg-dark text-light">
-    <div id="side_panel" class="col-md-4 col-sm-4">
-        <h5>
-            <%= current_user.email %>
-        </h5>
+
+    <div id="side_panel" class="col-4 col-xl-4">
+        <li class="list-group-item d-flex align-items-center justify-content-between user_list_item">
+            <div class="icon-container">
+                <%= link_to image_tag(current_user.chat_avatar, class: 'chat_pfp'), current_user %>
+                <%= turbo_stream_from "user_status" %>
+                <div>
+                <%= render "users/status", user: current_user %>
+                </div>
+            </div>
+            <div class='ms-2 me-auto username'>
+                <%= current_user.email%>
+            </div>
+        </li>
+
         <h4>Users</h4>
         <%= turbo_stream_from "users" %>
         <div id="users">
@@ -15,7 +28,7 @@
             <%= render @rooms %>
         </div>
     </div>
-    <div id="room_container" class="col-md-8 col-sm-8 bg-dark text-light">
+    <div id="room_container" class="col-8 col-xs-8 bg-dark text-light">
         <% if @single_room %>
             <div id="single_room">
                 <h4 class="text-center"><%= @user&.email || @single_room.name %></h4>
