--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,11 +33,13 @@
     overflow-y: scroll;
 
   }
+
   #chatroom_container {
     height: 100vh;
     margin-right: 0px !important;
     overflow-x: hidden;
     overflow-y: hidden;
+
   }
   
   .msg-content {
@@ -93,4 +95,20 @@
     padding-bottom: 0px;
     margin-bottom: 0px;
     color: rgb(203, 237, 11);
+  }
+
+  .icon-container {
+    width: 50px;
+    height: 50px;
+    position: relative;
+  }
+  .status-circle {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: grey;
+    border: 2px solid whitesmoke;
+    bottom: 10px;
+    right: 10px;
+    position: absolute;
   }
