--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,8 +5,12 @@
 <% end %>
 
 <li class="list-group-item d-flex align-items-center justify-content-between user_list_item <%= isActive %>">
-  <div>
+   <div class="icon-container">
     <%= link_to image_tag(user.chat_avatar, class: 'chat_pfp'), user %>
+    <%= turbo_stream_from "user_status" %>
+    <div>
+      <%= render "users/status", user: user %>
+    </div>
   </div>
     <%= link_to user.email, user, class: 'ms-auto p-3 username', data: { turbo: 'false' } %>
 </li>
