--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,114 +1,108 @@
  @import "bootstrap";
+ @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 
  body {
-    overflow: hidden;
- }
+  overflow: hidden;
+}
+.msg-form {
+  width: 100%;
+  height: 56px;
+  padding: 10px;
+}
 
- msg-form {
-    width: 100%;
-    height: 56px;
-    
-  }
-  
-  #single_room {
-    height: calc(100vh - 150px);
-  
-  }
-  
-  #messages {
-    height: calc(100vh - 150px);
-    overflow-x: hidden;
-    overflow-y: scroll;
-  }
-  
-  #room_container {
-    height: 100vh;
-    margin-right: 0px !important;
-  }
-  
-  #side_panel {
-    height: 100vh;
-    margin-right: 0px !important;
-    overflow-x: hidden;
-    overflow-y: scroll;
+#single_room {
+  height: calc(100vh - 150px);
+}
 
-  }
+#messages {
+  height: calc(100vh - 150px);
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
 
-  #chatroom_container {
-    height: 100vh;
-    margin-right: 0px !important;
-    overflow-x: hidden;
-    overflow-y: hidden;
+#room_container {
+  height: 100vh;
+  margin-right: 0px !important;
+}
 
-  }
-  
-  .msg-content {
-    width: 80%;
-    margin-right: 5px;
-  }
-  .message-box {
-    word-wrap: break-word;
-    width: fit-content;
-    max-width: 40%;
-    padding: 5px;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    background-color: #555555;
-    padding: 10px;
-  }
+#side_panel {
+  height: calc(100vh - 55px);
+  margin-right: 0px !important;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  margin-bottom: 55px;
+}
+#chatroom_container {
+  height: 100vh;
+  margin-right: 0px !important;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
 
-  .user_row {
-    height: 50px;
-    padding: 10px;
-    border-bottom: 1px solid #555555;
-  }
-  
-  .username {
-    overflow: hidden;
-  }
-  
-  .chat_pfp {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-right: 30px;
-  }
-  .user_list_item {
-    height: 55px;
-    background-color: #343a40 !important;
-  }
-  .room_list_item {
-    height: 55px;
-    background-color: #343a40 !important;
-    color: #fff;
-  }
+.msg-content {
+  width: 80%;
+  margin-right: 5px;
+}
 
-  .name {
-    margin-top: 15px;
-    padding-bottom: 0px;
-    margin-bottom: 0px;
-    color: rgb(27, 37, 27);
-  }
-  .time {
-    padding-top: 0px;
-    margin-top: 0px;
-    padding-bottom: 0px;
-    margin-bottom: 0px;
-    color: rgb(203, 237, 11);
-  }
+.message-box {
+  word-wrap: break-word;
+  width: fit-content;
+  max-width: 40%;
+  padding: 5px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  background-color: #555555;
+}
 
-  .icon-container {
-    width: 50px;
-    height: 50px;
-    position: relative;
-  }
-  .status-circle {
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: grey;
-    border: 2px solid whitesmoke;
-    bottom: 10px;
-    right: 10px;
-    position: absolute;
-  }
+.user_row {
+  height: 50px;
+  padding: 10px;
+  border-bottom: 1px solid #555555;
+}
+
+.username {
+  overflow: hidden;
+}
+
+.chat_pfp {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.user_list_item {
+  height: 55px;
+  background-color: #343a40 !important;
+}
+.room_list_item {
+  height: 55px;
+  background-color: #343a40 !important;
+  color: #fff;
+}
+
+.name {
+  margin-top: 15px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+.time {
+  padding-top: 0px;
+  margin-top: 0px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+.icon-container {
+  width: 50px;
+  height: 50px;
+  position: relative;
+}
+.status-circle {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: grey;
+  border: 2px solid white;
+  bottom: 10px;
+  right: 10px;
+  position: absolute;
+}
