--- a/app/views/layouts/_new_message_form.html.erb
+++ b/app/views/layouts/_new_message_form.html.erb
@@ -1,7 +1,26 @@
 <div class="form-group msg-form">
-    <%= form_with(model: [@single_room, @message], remote: true, class: 'd-flex',
-        data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }) do |f| %>
-    <%= f.text_area :body, id: 'chat-text', class: 'form-control msg-content', autocomplete: 'off' %>
-    <%= f.submit data: {disable_with: false}, class: 'btn btn-warning btn-sm' %>
+    <%= form_with(model: [@single_room, @message], remote: true, class:'d-flex',
+        data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset"}) do |f| %>
+            <div id="attachment-previews" 
+                data-controller="message-preview"
+                data-action="message-preview#preview"
+                >
+            </div>
+            <div class="image-upload">
+                    <label for="message_attachments", class: "form-label">
+                        <i class="bi bi-plus-circle upload-button"></i>
+                    </label>
+                    <%= f.file_field(:attachments, multiple: true, 
+                        style:"display: none; visibility: none;", 
+                        data:{controller: "message-preview", action:"change->message-preview#preview"}) %>
+            </div>
+                <%= f.text_field :body, id: 'chat-text', class: 'form-control msg-content', autocomplete: 'off' %>
+                <%= f.submit "Send",
+                data: {disable_with: false, 
+                controller: "message-preview", 
+                action:"click->message-preview#clearPreviews"}, 
+                class: 'btn btn-warning btn-sm' %>
+            </div>
+         
     <% end %>
 </div>
