--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,48 +2,40 @@
  @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 
  body {
-  overflow: hidden;
+  height: calc(100vh - 56px);
 }
 .msg-form {
   width: 100%;
   height: 56px;
   padding: 10px;
 }
-
 #single_room {
   height: calc(100vh - 150px);
 }
-
 #messages {
   height: calc(100vh - 150px);
   overflow-x: hidden;
   overflow-y: scroll;
 }
-
 #room_container {
-  height: 100vh;
+  height: calc(100vh - 56px);
   margin-right: 0px !important;
 }
-
 #side_panel {
-  height: calc(100vh - 55px);
+  height: calc(100vh - 56px);
   margin-right: 0px !important;
   overflow-x: hidden;
   overflow-y: scroll;
-  margin-bottom: 55px;
+  padding-left: 2em;
 }
 #chatroom_container {
-  height: 100vh;
+  height: calc(100vh - 56px);
   margin-right: 0px !important;
-  overflow-x: hidden;
-  overflow-y: hidden;
 }
-
 .msg-content {
   width: 80%;
   margin-right: 5px;
 }
-
 .message-box {
   word-wrap: break-word;
   width: fit-content;
@@ -53,17 +45,14 @@
   margin-bottom: 10px;
   background-color: #555555;
 }
-
 .user_row {
   height: 50px;
   padding: 10px;
   border-bottom: 1px solid #555555;
 }
-
 .username {
   overflow: hidden;
 }
-
 .chat_pfp {
   width: 40px;
   height: 40px;
@@ -79,7 +68,6 @@
   background-color: #343a40 !important;
   color: #fff;
 }
-
 .name {
   margin-top: 15px;
   padding-bottom: 0px;
@@ -105,4 +93,32 @@
   bottom: 10px;
   right: 10px;
   position: absolute;
+}
+.room_search_field {
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  border: 1px solid #555555;
+  border-radius: 10px;
+}
+.room_search_field:focus {
+  outline: 3px solid rgb(29, 81, 255);
+}
+.room-leave-link-icon {
+  color: rgb(144, 144, 144);
+}
+.room-leave-link-icon:hover {
+  color: rgba(144, 144, 144, 0.5);
+}
+.room-join-link-icon {
+  color: rgb(38, 255, 0);
+}
+.room-join-link-icon:hover {
+  color: rgba(38, 255, 0, 0.5);
+}
+.new-room-input {
+  border-radius: 5px !important;
+}
+.new-room-button {
+  border-radius: 5px !important;
 }
