--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 <h1>TurboChat</h1>
 
 <% if current_user %>
-<%= link_to "Start Chatting", rooms_path %>
-    <%= image_tag(current_user.avatar_thumbnail) %>
-    <%= button_to "Logout", destroy_user_session_path, method: :delete %>
-    <%= link_to "Edit Account", edit_user_registration_path, class: "btn btn-secondary btn-sm" %>
+  <%= link_to "Start Chatting", rooms_path %>
+  <%= image_tag(current_user.avatar_thumbnail) %>
+  <%= button_to "Logout", destroy_user_session_path, method: :delete, form: { data: { turbo_method: :false } } %>
+  <%= link_to "Edit Account", edit_user_registration_path, class:'btn btn-secondary'%>
 <% else %>
-    <%= link_to "Login", new_user_session_path %>
-    <%= link_to "Sign Up", new_user_registration_path %>
+  <%= link_to "Login", new_user_session_path %>
+  <%= link_to "Sign Up", new_user_registration_path %>
 <% end %>
