--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -24,8 +24,9 @@
         <h4>Rooms</h4>
         <%= turbo_stream_from "rooms" %>
         <%= render 'layouts/new_room_form' %>
+         <%= render 'rooms/search_form' %>
         <div id="rooms">
-            <%= render @rooms %>
+            <%= render @joined_rooms %>
         </div>
     </div>
     <div id="room_container" class="col-md-8 col-sm-8 bg-dark text-light">
@@ -34,7 +35,11 @@
                 <h4 class="text-center"><%= @user&.email || @single_room.name %></h4>
                 <%= turbo_stream_from @single_room %>
                 <div id="messages" data-controller="scroll">
-                    <%= render @messages %>
+                <%= turbo_frame_tag "page_handler" %>
+                    <%= render "messages/pager", pagy: @pagy %>
+                    <div id="messages-container">
+                        <%= render @messages %>
+                    </div>
                 </div>
                 <%= render 'layouts/new_message_form' %>
             </div>
