--- a/app/assets/stylesheets/chatroom.css
+++ b/app/assets/stylesheets/chatroom.css
@@ -87,3 +87,44 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.last-message,
+.last-message-time {
+  font-size: 12px;
+  color: #fa8072;
+  margin-top: 5px;
+}
+
+.message-image-container {
+  width: 150px;
+  height: 150px;
+  margin: 0;
+  padding: 0;
+}
+
+.message-image {
+  width: auto;
+  height: 150px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.message-video {
+  width: auto;
+  height: 150px;
+  margin: 0;
+  padding: 0;
+}
+
+.message-audio {
+  width: 100%;
+  height: 50px;
+  margin: 0;
+  padding: 0;
+}
+
+.message-file {
+  color: whitesmoke;
+  text-decoration: underline rgb(2, 106, 113);
+}
