--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -18,15 +18,15 @@
 
         <h4>Users</h4>
         <%= turbo_stream_from "users" %>
-        <div id="users">
-            <%= render @users %>
+        <div id="users" data-controller="user-list">
+            <%= render "users/users", users: @users %>
         </div>
         <h4>Rooms</h4>
         <%= turbo_stream_from "rooms" %>
         <%= render 'layouts/new_room_form' %>
          <%= render 'rooms/search_form' %>
-        <div id="rooms">
-            <%= render @joined_rooms %>
+        <div id="rooms" data-controller="room-list">
+            <%= render 'rooms/rooms', rooms: @joined_rooms, user: current_user %>
         </div>
     </div>
     <div id="room_container" class="col-md-8 col-sm-8 bg-dark text-light">
