--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -17,7 +17,7 @@
           </div>
       </div>
 
-        <%= link_to user.email, user, class: "ms-2 me-auto username", data: {turbo: "false"} %>
+        <%= link_to user.email, user, class: "ms-2 me-auto username msg-role-#{user.role}", data: {turbo: "false"} %>
       </div>
     </div>
     <%= turbo_frame_tag [dom_id(room), "user_last_message"] do %>
